# tex.beamer

./: .dockerignore  .gitignore  .gitlab-ci.yml  CITATION.cff  Dockerfile  Dockerfile.base  Makefile  README.md  commands.tex  debian-requirements.txt  environments.tex  fonts.tex  main.tex  packages.tex  presentation-blx (1).bib  presentation-cfg.tex  presentation.tex  pyproject.toml  run.sh  tex.beamer.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cfg/: settings.tex
imgs/: logo.eps  set_evolution.eps  set_evolution.eps_tex  set_evolution.ps  set_evolution.ps_tex
src/: main.tex
src/cfg/: environments.tex  fonts.tex  settings.tex
src/conf/: commands.tex  environments.tex  settings.tex
